--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
   bloc: ^8.1.4
+  cached_network_image: ^3.4.0
 
 dev_dependencies:
   flutter_test:
