--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^7.7.0
   bloc: ^8.1.4
   cached_network_image: ^3.4.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
